# react-native-tar-gz

./: .gitignore  .releaserc.json  CONTRIBUTING.md  LICENSE  README.md  package.json  postInstall.js  react-native-tar-gz.podspec  tsconfig.json
.github/workflows/: npm-release.yaml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/cpp/: cpp-adapter.cpp  targz.h
android/src/main/: AndroidManifest.xml
android/src/main/java/com/reactnative/targz/: TarGzModule.java  TarGzPackage.java
cpp/: cpp-adapter.cpp  react-native-tar-gz.cpp  react-native-tar-gz.h  targz-rs.h  targz.h
example/: app.json  metro.config.js  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/TarGzExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TarGzExample.xcodeproj/: project.pbxproj
example/ios/TarGzExample.xcworkspace/: contents.xcworkspacedata
example/ios/TarGzExampleTests/: TarGzExampleTests.m
example/src/: App.tsx
example/windows/: react-native-tar-gz-example.sln
example/windows/react-native-tar-gz-example/: App.cpp  App.h  App.idl  App.xaml  AutolinkedNativeModules.g.cpp  MainPage.cpp  MainPage.h  (+8 more)
ios/: TarGz.h  TarGz.mm
src/: NativeTarGz.ts  index.tsx
targz/: Cargo.toml
targz/.cargo/: config.toml
targz/src/: erros.rs  lib.rs
windows/: ReactNativeTarGz.sln
windows/ReactNativeTarGz/: ReactNativeModule.h  ReactNativeTarGz.vcxproj  ReactPackageProvider.cpp  ReactPackageProvider.h  ReactPackageProvider.idl  packages.lock.json
(+5 files in other folders)
